k8s/onlinejudge/redirect-www.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-www
spec:
  redirectRegex:
    regex: ^https://www.cscms.me(.*)
    replacement: https://cscms.me${1}
    permanent: true
