k8s/onlinejudge/temp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: temp-pod
  labels:
    name: temp-pod
spec:
  volumes:
    - name: oj-volume
      azureDisk:
        kind: Managed
        diskName: cscms-onlinejudge-k8s
        diskURI: /subscriptions/599484bf-47d6-44f0-a3b8-d80b8c8637d6/resourcegroups/MC_cscms.me_cscms-services_southeastasia/providers/Microsoft.Compute/disks/cscms-onlinejudge-k8s
  containers:
  - name: temp-pod
    image: ubuntu
    volumeMounts:
      - mountPath: /data
        name: oj-volume
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
  restartPolicy: OnFailure
    # resources:
    #   limits:
    #     memory: "128Mi"
    #     cpu: "500m"
    # ports:
    #   - containerPort: <Port>
