k8s/onlinejudge/oj-backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oj-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oj-backend
  template:
    metadata:
      labels:
        app: oj-backend
    spec:
    
      volumes:
        - name: oj-storage
          persistentVolumeClaim:
            claimName: oj-pvc
      containers:
        - name: backend
          image: thetkpark/onlinejudge:0b2c6b3651aa922571b4a010d98edec721ac3d34
          ports:
            - containerPort: 8000
            - containerPort: 1443
          volumeMounts:
            - name: oj-storage
              mountPath: /data
              subPath: backend
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "500Mi"
              cpu: "200m"
          # livenessProbe:
          #   httpGet:
          #     path: "/"
          #     port: 8000
          #     scheme: HTTP
          #   initialDelaySeconds: 120
          #   periodSeconds: 20
          #   failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: oj-backend-srv
spec:
  selector:
    app: oj-backend
  ports:
  - port: 8000
    targetPort: 8000
    name: web
  - port: 1443
    targetPort: 1443
    name: judge-server
