k8s/onlinejudge/oj-judge-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oj-judge-server-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oj-judge-server
  template:
    metadata:
      labels:
        app: oj-judge-server
    spec:
      volumes:
        - name: oj-storage
          persistentVolumeClaim:
            claimName: oj-pvc
      containers:
        - name: judge
          image: registry.cn-hongkong.aliyuncs.com/oj-image/judge:1.6.1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: oj-storage
              mountPath: /test_case
              subPath: backend/test_case
              readOnly: true
            - name: oj-storage
              mountPath: /log
              subPath: judge_server/log
            - name: oj-storage
              mountPath: /judger
              subPath: judge_server/run
          resources:
            limits:
              memory: "800Mi"
            requests:
              memory: "256Mi"
              cpu: "150m"
          livenessProbe:
            exec:
              command:
                - /app/.venv/bin/python3
                - /app/service.py
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
          securityContext:
            capabilities:
              drop:
                - SETPCAP
                - MKNOD
                - NET_BIND_SERVICE
                - SYS_CHROOT
                - SETFCAP
                - FSETID
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: oj-judge-server-srv
spec:
  selector:
    app: oj-judge-server
  ports:
  - port: 8080
    targetPort: 8080
