k8s/onlinejudge/oj-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oj-postgres-depl
spec:
  selector:
    matchLabels:
      app: oj-postgres
  template:
    metadata:
      labels:
        app: oj-postgres
    spec:
      volumes:
        - name: oj-storage
          azureDisk:
            kind: Managed
            diskName: cscms-onlinejudge-k8s
            diskURI: /subscriptions/599484bf-47d6-44f0-a3b8-d80b8c8637d6/resourcegroups/MC_cscms.me_cscms-services_southeastasia/providers/Microsoft.Compute/disks/cscms-onlinejudge-k8s
      containers:
        - name: postgres
          image: postgres:10-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: oj-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            limits:
              memory: "160Mi"
              cpu: "40m"
            requests:
              memory: "80Mi"
              cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: oj-postgres-srv
spec:
  selector:
    app: oj-postgres
  ports:
  - port: 5432
    targetPort: 5432
