k8s/onlinejudge/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: cscms-tls
  routes:
  - match: Host(`cscms.me`)
    kind: Rule
    services:
    - name: oj-backend-srv
      kind: Service
      port: 8000
  - match: Host(`www.cscms.me`)
    kind: Rule
    middlewares:
    - name: redirect-www
    services:
    - name: oj-backend-srv
      kind: Service
      port: 8000
